# sternum-identification

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
01_preprocessing/: run_segmentation.py
02_feature_extraction/: segmentation_input.py
02_feature_extraction/efa/: efa_core.py  extract_efa_features.py  visualize_efa.py
02_feature_extraction/radiomics/: extract_shape_features.py
03_quality_control/: build_cohorts.py  mahalanobis_qc.py  visual_case_review.py
04_matching/: crossfit_efa_matching.py  radiomics_matching.py
05_statistics/: _common.py  auc_inference.py  rank_inference.py
common/: __init__.py  efa_scoring.py  io_utils.py  matching_metrics.py  orientation.py  provenance.py  schemas.py
environments/env-radiomics/: pyproject.toml
environments/env-seg/: pyproject.toml
examples/: input_cases.csv
tests/: conftest.py  test_efa_geometry.py  test_matching_metrics.py  test_orientation.py  test_pipeline_contracts.py  test_preprocessing_segmentation.py  test_provenance.py
tests_radiomics/: test_shape_extraction.py
